# dioxus-daisyui-admin-protal

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js  tailwindcss
public/: tailwind.css
src/: app.rs  lib.rs  main.rs  route.rs  route_home.rs  utils.rs
src/components/: bell.rs  c1.rs  c2.rs  customized_svg.rs  dashboard.rs  dropdown_menu_item.rs  forget_form.rs  info.rs  leads.rs  login_decoration.rs  login_form.rs  menu_item.rs  mod.rs  notification_maker.rs  notifications.rs  register_form.rs  theme.rs  toast.rs  transactions.rs
src/services/: notification.rs
src/views/: home.rs  login.rs  mod.rs  page_not_found.rs  root.rs
