[package]
name = "dioxus-daisyui-admin-protal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dioxus = "0.4.3"
dioxus-desktop = { version = "0.4.3", optional = true }
dioxus-logger = "0.4.1"
dioxus-router = "0.4.3"
dioxus-web = { version = "0.4.3", optional = true }
log = "0.4.20"
serde = "1.0.197"
serde_json = "1.0.114"

[features]
default=[]
web=["dep:dioxus-web"]
desktop=["dep:dioxus-desktop"]
